@@ -2,6 +2,7 @@ Changes in 2.2.1CVS
 
 - Support for MingW builds
 - Bugfix in Polygonizer chocking on invalid LineString inputs
+- CAPI: small leak removed in GEOSHasZ() 
 
 Changes in 2.2.0
 
